fix card content overflow

--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -17,9 +17,10 @@
 }
 
 .note-card {
-    position: relative;
+    display: flex;
+    flex-direction: column;
     width: 400px;
-    height: 200px;
+    min-height: 200px;
     box-shadow: 0 0 12px 0 rgb(0, 0, 0, 0.2);
     border-radius: 15px;
     padding: 15px;
@@ -28,7 +29,6 @@
 
 .note-card .note-card-action {
     display: flex;
-    flex-wrap: wrap;
     column-gap: 10px;
     justify-content: end;
     margin-top: 20px;
@@ -67,10 +67,7 @@
     color: white;
 }
 
-
 .note-card .note-card-date {
-    position: absolute;
-    bottom: 0;
-    right: 0;
     margin: 10px;
+    align-self: end;
 }
